<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    android:orientation="vertical"
    tools:context=".ModeManagement"
    >

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="20sp" />

    <RadioGroup android:id="@+id/rBtnGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/enc_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enc"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sign_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/encsign_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encsign"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="20sp" />
</LinearLayout>

